[rev. 96]
<General changes>
  Basic vehicle is in place.
  One vhc of each type is available to every character. No prereq limitation.
  Only pilot access available, and for the owner only.
  No zoning yet.
  Orientation issues from the others chars point of view.
  Many things not implemented (and a good part still to be decoded)
  
[GAME]
  Many changes in decoders and char, client and vehicle code.

Hammag; 20.01.2008 20:00 GMT+2
----------
[rev. 97]
<General changes>
  [GAME + INFO]
    sql.cpp/.h : added EscapeString() methode to PMySQL class, to permit string escape in SQL queries
    *.cpp : escape all strings used in SQL queries, which is now mandatory.
  [GAME + INFO + PATCH]
    *.cpp : replaced strcpy(), strcat(), sprintf() with respectively strncpy(), strncat(), snprintf()
      The first ones are now forbidden.

Hammag; 2.02.2008 16:15 GMT+2
----------
[rev. 98]

[Infoserver]
accounts.cpp : Correction of the account creation/update SQL query - thank to drhawk ;)

Hammag; 11.02.2008 20:30 GMT+2
----------
[rev. 99]
Correction of an initialization issue that caused compilation error on some environments.

Hammag; 20.04.2008 00:50 GMT+1
----------
[rev. 100]

<Gameserver>
msgbuilder.h/.cpp: added method PMessage* BuildTraderItemListMsg() (test version)
decoded/upd_useobject.cpp: change so that only vhc terminal opens vhc interface
client.cpp: added fragmented message type 0xac for traders
chars.cpp: fixed initial inventory saving
item.cpp/.h: added new method PItem::MakeStandardItem()

Hammag; 15.03.2009 19:25 GMT+1
----------
[rev. 103]
Fixed various warnings due to C++ compiler being more picky.
  TinNS should now compile without warning on gcc version 4.3.2
  Abort compliation on warning reactivated in makefile (-Werror)

Added file options.local.exemple to set custom complilation options (read it for more info)

Hammag; 19.03.2009 13:00 GMT+1
----------
[rev. 104]

<Gameserver>
  Fixed some errors in apartment Genrep'ing code
  Implemted Venture Warp